src/test/ui/compare-method/region-unrelated.stderr
error[E0276]: impl has stricter requirements than trait, #[deny(extra_requirement_in_impl)] on by default
  --> $DIR/region-unrelated.rs:22:5
   |
17 |     fn foo() where T: 'a;
   |     --------------------- definition of `foo` from trait
...
22 |     fn foo() where V: 'a { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `V: 'a`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #37166 <https://github.com/rust-lang/rust/issues/37166>

error: aborting due to previous error

